# crack

./: Cargo.toml  README.md  architecture.md
.devcontainer/: Dockerfile  devcontainer.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crack-core/: Cargo.toml
crates/crack-core/src/: lib.rs
crates/crack-core/src/common/: breakpoint.rs  general.rs  mod.rs
crates/crack-core/src/platform/: mod.rs  unix.rs  windows.rs
crates/crack-core/src/utils/: mod.rs
crates/experimentals/: Cargo.toml
crates/experimentals/src/: main.rs
