[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.80"

gimli = "0.28.1"    # DWARF support
capstone = "0.11.0" # Disassembly support
# addr2line = "0.17.0"
# Syntax highlight, syntect = {version = "4.4.0", optional = true}
libproc = "0.14.2"
libc = "0.2.72"

# *nix
memmap = "0.7.0"
nix = "0.28.0"

# Windows
windows = { version = "0.53.0" }
