[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.80"
futures = "0.3"
tokio = "1.36.0"
tokio-util = "0.7"

gimli = "0.28.1"    # DWARF support
capstone = "0.12.0" # Disassembly support
byteorder = "1.0.0"
# addr2line = "0.17.0"
# Syntax highlight, syntect = {version = "4.4.0", optional = true}
libproc = "0.14.2"
libc = "0.2.72"

# *nix
memmap = "0.7.0"
nix = "0.28.0"

# Windows
windows = "0.53.0"
windows-core = "0.53.0"
